--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
 	<string name="title_activity_detail">DetailActivity</string>
 	<string name="action_settings">Settings</string>
 	<string name="tv_shows">TV SHOWS</string>
-	<string name="movies">MOVIES</string></resources>
+	<string name="movies">MOVIES</string>
+	<string name="episode">E</string>
+	<string name="season">S</string>
+</resources>
