--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,9 @@
 	<string name="connectivity_error_msg">Something fucked up... Swipe down to refresh!</string>
 	<string name="title_activity_detail">DetailActivity</string>
 	<string name="action_settings">Settings</string>
-	<string name="tv_shows">TV SHOWS</string>
-	<string name="movies">MOVIES</string>
+	<string name="tv_shows">Tv Shows</string>
+	<string name="movies">Movies</string>
+	<string name="anime">Anime</string>
 	<string name="episode">E</string>
 	<string name="season">S</string>
 </resources>
