Add popular banner using RxJava zip

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
 	<string name="tv_shows">Tv Shows</string>
 	<string name="movies">Movies</string>
 	<string name="anime">Anime</string>
+	<string name="popular">POPULAR</string>
 	<string name="episode">E</string>
 	<string name="season">S</string>
 </resources>
