--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,10 @@
 	<string name="movies">Movies</string>
 	<string name="anime">Anime</string>
 	<string name="popular">POPULAR</string>
+	<string name="search">Search</string>
+	<string name="search_hint_tv">Search Tv Shows</string>
+	<string name="search_hint_movies">Search Movies</string>
+	<string name="search_hint_anime">Search Anime</string>
 	<string name="episode">E</string>
 	<string name="season">S</string>
 </resources>
