--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
 	<string name="anime">Anime</string>
 	<string name="popular">POPULAR</string>
 	<string name="search">Search</string>
+	<string name="search_hint">Search ToonUp</string>
 	<string name="search_hint_tv">Search Tv Shows</string>
 	<string name="search_hint_movies">Search Movies</string>
 	<string name="search_hint_anime">Search Anime</string>
