Show bottom sheet on link failure so user can pick another link

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
 	<string name="episode">E</string>
 	<string name="season">S</string>
 	<string name="connectivity_toast_msg">I once heard of a legend that you had internet. The legend was wrong</string>
+	<string name="bad_link_msg">Oops! That link seems to be broken, try another one!</string>
 </resources>
